# actor-templates

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  AGENTS-short.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TEST_COMMIT.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  tsconfig.eslint.json  tsconfig.json
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_archives.yaml  build_archives.yml  buildarchives.yml  lint_and_test.yaml  nodejs.yml  test_agent_ai_templates.yml  test_dockerfile_builds.yaml  test_dockerfile_builds.yml  test_llm_ai_node_templates.yaml  test_llm_ai_node_templates.yml  test_llm_ai_python_templates.yaml  test_llm_ai_python_templates.yml  test_llm_ai_templates.yml  test_node_templates.yaml  test_node_templates.yml  test_python_templates.yaml  test_python_templates.yml  update-new-issue.yaml  update-templates.yml
agent-bases/: js.AGENTS.md  python.AGENTS.md  ts.AGENTS.md
bases/: js.AGENTS.md
examples/accept_user_input/: accept_user_input.js  accept_user_input.md
examples/add_data_to_dataset/: add_data_to_dataset.js  add_data_to_dataset.md
examples/basic_crawler/: basic_crawler.js  basic_crawler.md
examples/call_actor/: README.md  call_actor.js  call_actor.md  call_actor.mdx
examples/call_an_actor/: call_an_actor.js  call_an_actor.md
examples/capture_screenshot/: capture_screenshot.md  capture_screenshot.mdx  capture_screenshot_puppeteer.js  capture_screenshot_puppeteer_crawler.js  puppeteer_apify_snapshot.js  puppeteer_crawler_apify_snapshot.js  puppeteer_crawler_page_screenshot.js  puppeteer_page_screenshot.js
examples/cheerio_crawler/: cheerio_crawler.js  cheerio_crawler.md
examples/crawl_a_sitemap/: crawl_a_sitemap.md  crawl_a_sitemap_basic.js  crawl_a_sitemap_cheerio.js  crawl_a_sitemap_puppeteer.js
examples/crawl_all_links/: crawl_all_links.md  crawl_all_links.mdx  crawl_all_links_cheerio.js  crawl_all_links_playwright.js  crawl_all_links_puppeteer.js
examples/crawl_multiple_urls/: crawl_multiple_urls.md  crawl_multiple_urls_basic.js  crawl_multiple_urls_cheerio.js  crawl_multiple_urls_playwright.js  crawl_multiple_urls_puppeteer.js
examples/crawl_relative_links/: crawl_relative_links.js  crawl_relative_links.md  crawl_relative_links.mdx
examples/crawl_single_url/: crawl_single_url.js  crawl_single_url.md  crawl_single_url.mdx
examples/crawl_sitemap/: crawl_sitemap.md  crawl_sitemap_basic.js  crawl_sitemap_cheerio.js  crawl_sitemap_puppeteer.js
examples/crawl_some_links/: crawl_some_links.md  crawl_some_links.mdx  crawl_some_links_cheerio.js  crawl_some_links_puppeteer.js
examples/forms/: forms.js  forms.md  forms.mdx
examples/handle_broken_links/: handle_broken_links.js  handle_broken_links.md
examples/hello_world/: hello_world.js  hello_world.md
examples/map_and_reduce/: map.js  map_and_reduce.md  map_and_reduce.mdx  reduce.js
examples/playwright_crawler/: playwright_crawler.js  playwright_crawler.md  playwright_crawler.mdx
examples/puppeteer_crawler/: puppeteer_crawler.js  puppeteer_crawler.md
examples/puppeteer_recursive_crawl/: puppeteer_recursive_crawl.js  puppeteer_recursive_crawl.md  puppeteer_recursive_crawl.mdx
examples/puppeteer_sitemap/: puppeteer_sitemap.js  puppeteer_sitemap.md
examples/puppeteer_with_proxy/: puppeteer_with_proxy.js  puppeteer_with_proxy.md  puppeteer_with_proxy.mdx
examples/screenshots/: screenshots.js  screenshots.md
examples/synchronous_run/: synchronous_run.js  synchronous_run.md  synchronous_run.mdx
examples/use_stealth_mode/: use_stealth_mode.js  use_stealth_mode.md
scripts/: copy-agents-md-to-templates.mts  test_docker_builds.sh
scripts/actions/: update-templates.mts
src/: build.js  build_examples.js  build_templates.js  build_wrappers.js  consts.js  index.d.mts  index.js
templates/: .eslintrc.json  consoleReadmeSuffix.md  console_readme_suffix.md  local_readme_suffix.md  manifest.json  readmeTemplate.mjs  readmeTemplate.mustache
templates/apify_project/: package.json
templates/basic_crawler/: main.js  package.json
templates/bun-start/: package.json
templates/cheerio_crawler/: main.js  package.json
templates/cli-start/: .actorignore  Dockerfile  README.md  main.sh
templates/crawlee_cheerio_typescript/: .gitignore  Dockerfile  INPUT_SCHEMA.json  package.json  tsconfig.json
templates/crawlee_playwright_typescript/: Dockerfile  INPUT_SCHEMA.json  apify.json  package.json
templates/crawlee_puppeteer_typescript/: Dockerfile  INPUT_SCHEMA.json  apify.json  package.json  tsconfig.json
templates/example_basic_crawler/: Dockerfile  apify.json  main.js  package.json
templates/example_hello_world/: main.js  package.json
templates/example_hello_world_ts/: .gitignore  Dockerfile  INPUT_SCHEMA.json  package.json  tsconfig.eslint.json  tsconfig.json
templates/example_puppeteer_single_page/: Dockerfile  main.js  package.json
templates/example_python/: .gitignore  Dockerfile  INPUT_SCHEMA.json  README.md  main.py  requirements.txt
templates/example_typescript/: .eslintrc  Dockerfile  README.md  package.json
templates/getting_started_node/: INPUT_SCHEMA.json  README.md  package.json
templates/getting_started_python/: .gitignore  INPUT_SCHEMA.json  Makefile  main.py  requirements.txt
templates/getting_started_typescript/: Dockerfile  (+2 more)
templates/python-crawlee-parsel/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
templates/python-crawlee-parsel/.actor/: actor.json  input_schema.json
templates/python-crawlee-parsel/my_actor/: main.py  routes.py
templates/python-uv/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
templates/python-uv/.actor/: actor.json  dataset_schema.json  input_schema.json
templates/python-uv/my_actor/: main.py
test/: examples.test.js  index.test.js  local_storage_dir_emulator.js  manifest.test.js  templates.test.js  tsconfig.test.js
wrappers/: manifest.json
(+803 files in other folders)
