[project]
name = "actor-templates"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "apify[scrapy]>=3.0.0,<4.0.0",
    "crawlee[all]>=1.0.0,<2.0.0",
    "beautifulsoup4[lxml]<5.0.0",
    "langchain<2.0.0",
    "langchain-openai<2.0.0",
    "langgraph<2.0.0",
    "playwright<2.0.0",
    "pydantic-ai<2.0.0",
    "scrapy<3.0.0",
    "selenium<5.0.0",
]

[dependency-groups]
dev = [
    "poethepoet<1.0.0",
    "ruff~=0.14.0",
    "ty~=0.0.0",
]

[tool.ruff]
line-length = 120
include = ["templates/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {filename}
    "BLE001", # Do not catch blind exception
    "C901",   # `{name}` is too complex
    "COM812", # This rule may cause conflicts when used with the formatter
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "D203",   # One blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "D413",   # Missing blank line after last section
    "EM",     # flake8-errmsg
    "G004",   # Logging statement uses f-string
    "ISC001", # This rule may cause conflicts when used with the formatter
    "FIX",    # flake8-fixme
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.pylint]
max-branches = 18

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
timeout = 1200

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["templates"]

# The templates use relative imports as they're run as packages (python -m src).
# ty doesn't fully support this pattern yet, so we ignore unresolved-import errors.
[tool.ty.rules]
unresolved-import = "ignore"

[tool.poe.tasks]
clean = "rm -rf .ty_cache .pytest_cache .ruff_cache build dist htmlcov .coverage"
install-dev = "uv sync --all-extras"
check-code = ["lint", "type-check"]

[tool.poe.tasks.lint]
shell = "uv run ruff format --check && uv run ruff check"

[tool.poe.tasks.format]
shell = "uv run ruff check --fix && uv run ruff format"

# Due to each template having its own "src" directory, running type checking on all templates together causes
# the error: "Duplicate module named 'src'". Therefore, type checking must be executed separately for each template.
[tool.poe.tasks.type-check]
shell = """
uv run ty check templates/python-beautifulsoup && \
uv run ty check templates/python-crawlee-beautifulsoup && \
uv run ty check templates/python-crawlee-parsel && \
uv run ty check templates/python-crawlee-playwright && \
uv run ty check templates/python-crawlee-playwright-camoufox && \
uv run ty check templates/python-empty && \
uv run ty check templates/python-mcp-empty && \
uv run ty check templates/python-mcp-proxy && \
uv run ty check templates/python-playwright && \
uv run ty check templates/python-scrapy && \
uv run ty check templates/python-selenium && \
uv run ty check templates/python-smolagents && \
uv run ty check templates/python-standby && \
uv run ty check templates/python-start && \
uv run ty check templates/python-crewai && \
uv run ty check templates/python-langgraph && \
uv run ty check templates/python-llamaindex-agent && \
uv run ty check templates/python-pydanticai
"""
